Add some additional tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 max-distance-km=2000
+max-depth=5
 
 spring.datasource.url=jdbc:h2:file:./data/beer
 spring.datasource.driverClassName=org.h2.Driver
